Cambios para soportar nuevo flujo

--- a/public/index.html
+++ b/public/index.html
@@ -30,10 +30,15 @@
         <div class="slds-grid">
 
             <main class="slds-col slds-size--1-of-3 slds-p-horizontal--small">
-              <h1>Welcome to your activity!</h1>
-
+              <h1>Bienvenido a la integración de Atom y Whatsapp</h1>
             </main>
-           
+            <label for="selectplant">Selecciona la plantilla para envío</label>
+            <select id="plantilla_what" class="form-select" aria-label="Default select example">
+                <option value="fh9PkqY6NCalP3RQb8cB" selected>Usos del App</option>
+                <option value="6b3p5Erdc7bNcmP9oWlJ">Beneficios del app</option>
+                <option value="xQADyLzOkArz6BFDQ7ST">10 Motivos</option>
+                <option value="f4TXC29Wb2LGZFmmJT1C">¿Sigues interesado?</option>
+              </select>
             
 
         </div>
