--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,12 @@
                 <option value="fh9PkqY6NCalP3RQb8cB" selected>Usos del App</option>
                 <option value="6b3p5Erdc7bNcmP9oWlJ">Beneficios del app</option>
                 <option value="xQADyLzOkArz6BFDQ7ST">10 Motivos</option>
-                <option value="f4TXC29Wb2LGZFmmJT1C">¿Sigues interesado? </option>
+                <option value="f4TXC29Wb2LGZFmmJT1C">¿Sigues interesado?</option>
+              </select>
+              <label for="selectplant">Selecciona la extensión de datos envio</label>
+            <select id="plantilla_de" class="form-select" aria-label="Default select example">
+                <option value="OPORTUNIDAD_LEXUS_B2C" selected>OPORTUNIDAD_LEXUS_B2C</option>
+                <option value="DATA_PRUEBA_NUEVOS_USER">DATA_PRUEBA_NUEVOS_USER</option>
               </select>
             
 
