--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         <div class="slds-grid">
 
             <main class="slds-col slds-size--1-of-3 slds-p-horizontal--small">
-              <h1>Bienvenido a la integración de Atom y Whatsapp</h1>
+              <h1>Bienvenido a la integración de Atom y Whatsapp</h1>j
             </main>
             <label for="selectplant">Selecciona la plantilla para envío</label>
             <select id="plantilla_what" class="form-select" aria-label="Default select example">
