--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
               <label for="selectplant">Selecciona la extensión de datos envio</label>
             <select id="plantilla_de" class="form-select" aria-label="Default select example">
                 <option value="OPORTUNIDAD_LEXUS_B2C" selected>OPORTUNIDAD_LEXUS_B2C</option>
-                <option value="DATA_PRUEBA_NUEVOS_USER">DATA_PRUEBA_NUEVOS_USER</option>
+                <option value="LEADS_NUEVOS_B2C">LEADS_NUEVOS_B2C</option>
               </select>
             
 
