--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,13 @@
                 <option value="6b3p5Erdc7bNcmP9oWlJ">Beneficios del app</option>
                 <option value="xQADyLzOkArz6BFDQ7ST">10 Motivos</option>
                 <option value="f4TXC29Wb2LGZFmmJT1C">¿Sigues interesado?</option>
+                <option value="f4TXC29Wb2LGZFmmJT1C">Esta es una nueva plantilla</option>
               </select>
               <label for="selectplant">Selecciona la extensión de datos envio</label>
             <select id="plantilla_de" class="form-select" aria-label="Default select example">
                 <option value="OPORTUNIDAD_LEXUS_B2C" selected>OPORTUNIDAD_LEXUS_B2C</option>
                 <option value="LEADS_NUEVOS_B2C">LEADS_NUEVOS_B2C</option>
+                <option value="DATOS_PARA_PROBAR">DATOS_PARA_PROBAR</option>
               </select>
             
 
