--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,9 @@
                 <option value="6b3p5Erdc7bNcmP9oWlJ">Beneficios del app</option>
                 <option value="xQADyLzOkArz6BFDQ7ST">10 Motivos</option>
                 <option value="f4TXC29Wb2LGZFmmJT1C">¿Sigues interesado?</option>
-                <option value="f4TXC29Wb2LGZFmmJT1C">Esta es una nueva plantilla</option>
+                <option value="yngabeB4NnhIE0QuLwN3">Post venta</option>
+                <option value="RQBoYvpBBDdqx7kJMVqL">Purdy trabajo 1</option>
+                <option value="JC9B5iWr5v7woXD9YSmz">Purdy trabajo 2</option>
               </select>
               <label for="selectplant">Selecciona la extensión de datos envio</label>
             <select id="plantilla_de" class="form-select" aria-label="Default select example">
