--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,7 @@
                 <option value="yngabeB4NnhIE0QuLwN3">Post venta</option>
                 <option value="RQBoYvpBBDdqx7kJMVqL">Purdy trabajo 1</option>
                 <option value="JC9B5iWr5v7woXD9YSmz">Purdy trabajo 2</option>
+                <option value="09SckrOTCx2EXCj83NaU">Takata</option>
               </select>
               <label for="selectplant">Selecciona la extensión de datos envio</label>
             <select id="plantilla_de" class="form-select" aria-label="Default select example">
