--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
                 <option value="OPORTUNIDAD_LEXUS_B2C" selected>OPORTUNIDAD_LEXUS_B2C</option>
                 <option value="LEADS_NUEVOS_B2C">LEADS_NUEVOS_B2C</option>
                 <option value="DATOS_PARA_PROBAR">DATOS_PARA_PROBAR</option>
+                <option value="DATOS_PARA_PMP">DATOS_PARA_PMP</option>
               </select>
             
 
