Add Jorney de ventas

--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,7 @@
                 <option value="LEADS_NUEVOS_B2C">LEADS_NUEVOS_B2C</option>
                 <option value="DATOS_PARA_PROBAR">DATOS_PARA_PROBAR</option>
                 <option value="DATOS_PARA_PMP">DATOS_PARA_PMP</option>
+                <option value="Journey de seguimiento a oportunidades en proceso Whatsapp - 2023-12-04T171510349">DATOS_PARA_VENTAS</option>  
               </select>
             
 
