--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,9 @@
                 <option value="JC9B5iWr5v7woXD9YSmz">Purdy trabajo 2</option>
                 <option value="09SckrOTCx2EXCj83NaU">Takata</option>
                 <option value="BaOPFg34rdwAkYZ38hEL">Ventas</option>
+                <option value="0JvOsRUJxBhqb5b5Obax">G3I</option>
+                <option value="vocPXewJZ5IlMjO6CCCx">G9</option>
+                <option value="pFiBibxDbaz6Diam4WI8">P7</option>
               </select>
               <label for="selectplant">Selecciona la extensión de datos envio</label>
             <select id="plantilla_de" class="form-select" aria-label="Default select example">
@@ -50,7 +53,8 @@
                 <option value="LEADS_NUEVOS_B2C">LEADS_NUEVOS_B2C</option>
                 <option value="DATOS_PARA_PROBAR">DATOS_PARA_PROBAR</option>
                 <option value="DATOS_PARA_PMP">DATOS_PARA_PMP</option>
-                <option value="Journey de seguimiento a oportunidades en proceso Whatsapp - 2023-12-04T171510349">DATOS_PARA_VENTAS</option>  
+                <option value="Journey de seguimiento a oportunidades en proceso Whatsapp - 2023-12-04T171510349">DATOS_PARA_VENTAS</option>
+                <option value="LEADS XPENG 2024 _ XPENG Costa Rica 274053937">LEADS _XPENG_2024</option>
               </select>
             
 
