--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
                 <option value="0JvOsRUJxBhqb5b5Obax">G3I</option>
                 <option value="vocPXewJZ5IlMjO6CCCx">G9</option>
                 <option value="pFiBibxDbaz6Diam4WI8">P7</option>
+                <option value="QRYT10uzVHcPkFbHYl9g">Ventas FREEWAY</option>
               </select>
               <label for="selectplant">Selecciona la extensión de datos envio</label>
             <select id="plantilla_de" class="form-select" aria-label="Default select example">
@@ -54,6 +55,7 @@
                 <option value="DATOS_PARA_PROBAR">DATOS_PARA_PROBAR</option>
                 <option value="DATOS_PARA_PMP">DATOS_PARA_PMP</option>
                 <option value="Journey de seguimiento a oportunidades en proceso Whatsapp - 2023-12-04T171510349">DATOS_PARA_VENTAS</option>
+                <option value="TEST FREEWAY oportunidades en proceso Whatsapp">FREEWAY TEST DATOS_PARA_VENTAS</option>
                 <option value="LEADS XPENG 2024 _ XPENG Costa Rica 274053937">LEADS _XPENG_2024</option>
               </select>
             
