envio de una nueva dt

--- a/public/index.html
+++ b/public/index.html
@@ -47,6 +47,7 @@
                 <option value="vocPXewJZ5IlMjO6CCCx">G9</option>
                 <option value="pFiBibxDbaz6Diam4WI8">P7</option>
                 <option value="QRYT10uzVHcPkFbHYl9g">Ventas FREEWAY</option>
+                <option value="QRYT10uzVHcPkFbHYl9g">DATA_PRUEBA_NUEVOS_USER</option>
               </select>
               <label for="selectplant">Selecciona la extensión de datos envio</label>
             <select id="plantilla_de" class="form-select" aria-label="Default select example">
@@ -57,6 +58,7 @@
                 <option value="Journey de seguimiento a oportunidades en proceso Whatsapp - 2023-12-04T171510349">DATOS_PARA_VENTAS</option>
                 <option value="TEST FREEWAY oportunidades en proceso Whatsapp">FREEWAY TEST DATOS_PARA_VENTAS</option>
                 <option value="LEADS XPENG 2024 _ XPENG Costa Rica 274053937">LEADS _XPENG_2024</option>
+                <option value="DATA_PRUEBA_NUEVOS_USER">LEADS DATA_PRUEBA_NUEVOS_USER</option>
               </select>
             
 
