Data Extension nombres iguales

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
                 <option value="0JvOsRUJxBhqb5b5Obax">G3I</option>
                 <option value="vocPXewJZ5IlMjO6CCCx">G9</option>
                 <option value="pFiBibxDbaz6Diam4WI8">P7</option>
-                <option value="iXebbTGwOpjpqDy2l0wm">Ventas FREEWAY</option>
+                <option value="iXebbTGwOpjpqDy2l0wm">TEST_FREEWAY_oportunidades_en_proceso_Whatsapp</option>
                 <option value="QRYT10uzVHcPkFbHYl9g">DATA_PRUEBA_NUEVOS_USER</option>
               </select>
               <label for="selectplant">Selecciona la extensión de datos envio</label>
@@ -56,7 +56,7 @@
                 <option value="DATOS_PARA_PROBAR">DATOS_PARA_PROBAR</option>
                 <option value="DATOS_PARA_PMP">DATOS_PARA_PMP</option>
                 <option value="Journey de seguimiento a oportunidades en proceso Whatsapp - 2023-12-04T171510349">DATOS_PARA_VENTAS</option>
-                <option value="TEST FREEWAY oportunidades en proceso Whatsapp">FREEWAY TEST DATOS_PARA_VENTAS</option>
+                <option value="TEST_FREEWAY_oportunidades_en_proceso_Whatsapp">TEST_FREEWAY_oportunidades_en_proceso_Whatsapp</option>
                 <option value="LEADS XPENG 2024 _ XPENG Costa Rica 274053937">LEADS _XPENG_2024</option>
                 <option value="DATA_PRUEBA_NUEVOS_USER">LEADS DATA_PRUEBA_NUEVOS_USER</option>
               </select>
