Actualización desde productivo

--- a/public/index.html
+++ b/public/index.html
@@ -42,12 +42,25 @@
                 <option value="RQBoYvpBBDdqx7kJMVqL">Purdy trabajo 1</option>
                 <option value="JC9B5iWr5v7woXD9YSmz">Purdy trabajo 2</option>
                 <option value="09SckrOTCx2EXCj83NaU">Takata</option>
-                <option value="QRYT10uzVHcPkFbHYl9g">Ventas</option>
+                <option value="BaOPFg34rdwAkYZ38hEL">Ventas</option>
                 <option value="0JvOsRUJxBhqb5b5Obax">G3I</option>
                 <option value="vocPXewJZ5IlMjO6CCCx">G9</option>
                 <option value="pFiBibxDbaz6Diam4WI8">P7</option>
-                <option value="iXebbTGwOpjpqDy2l0wm">TEST_FREEWAY_oportunidades_en_proceso_Whatsapp</option>
-                <option value="QRYT10uzVHcPkFbHYl9g">DATA_PRUEBA_NUEVOS_USER</option>
+                <option value="kKhjZZa6VfMT5Bceyz8f">Subaru Purdy Go</option>
+                <option value="PjJvB0Fy9aJaFPWmZba2">Subaru Purdy centers</option>
+                <option value="h3etW6UFGBWBNsIzlLUq">Subaru Purdy en línea</option>
+                <option value="fmQa7MDzdWRmAvLRvXiF">Purdy Go Toyota</option>
+                <option value="rbokimuE2WwZFxs77MVJ">Purdy centers Toyota</option>
+                <option value="dKcxdssTT8625qfN0VIP">Purdy en línea Toyota</option>
+                <option value="USOGFVR6ut7G4N93kku9">Purdy Go VW</option>
+                <option value="m0be0SLqNj4RZoR2luWV">Purdy Centers VW</option>
+                <option value="Ez3lKVukHhuGIVBFap3y">Purdy en linea VW</option>
+                <option value="wVqJCv3X7TvZOh0uk6EP">Purdy Go Xpeng</option>
+                <option value="lxhtmG6DAbytlf0i2rfp">Purdy Centers Xpeng</option>
+                <option value="IOuEZSw60clKseIPF1nY">Purdy en linea Xpeng</option>
+                <option value="hgA4fJpffzngd5Iuljto">Purdy Go Ford</option>
+                <option value="pwmJduHMV2duUL4ZUc8x">Purdy Centers Ford</option>
+                <option value="CQWsS9Lz7cfimi5emFF9">Purdy en linea Ford</option>
               </select>
               <label for="selectplant">Selecciona la extensión de datos envio</label>
             <select id="plantilla_de" class="form-select" aria-label="Default select example">
@@ -56,9 +69,8 @@
                 <option value="DATOS_PARA_PROBAR">DATOS_PARA_PROBAR</option>
                 <option value="DATOS_PARA_PMP">DATOS_PARA_PMP</option>
                 <option value="Journey de seguimiento a oportunidades en proceso Whatsapp - 2023-12-04T171510349">DATOS_PARA_VENTAS</option>
-                <option value="TEST_FREEWAY_oportunidades_en_proceso_Whatsapp">TEST_FREEWAY_oportunidades_en_proceso_Whatsapp</option>
                 <option value="LEADS XPENG 2024 _ XPENG Costa Rica 274053937">LEADS _XPENG_2024</option>
-                <option value="DATA_PRUEBA_NUEVOS_USER">LEADS DATA_PRUEBA_NUEVOS_USER</option>
+                <option value="GP_Oportunidades_2024">Jorney_2025</option>
               </select>
             
 
