agregar nueva opcion test en html3

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,7 @@
                 <option value="hgA4fJpffzngd5Iuljto">Purdy Go Ford</option>
                 <option value="pwmJduHMV2duUL4ZUc8x">Purdy Centers Ford</option>
                 <option value="CQWsS9Lz7cfimi5emFF9">Purdy en linea Ford</option>
+                <option value="SJ6B7P6ziWKBbwYoQuYf">TEST_FREEWAY_oportunidades_en_proceso_Whatsapp</option> <!--Cambios MUR-->
               </select>
               <label for="selectplant">Selecciona la extensión de datos envio</label>
             <select id="plantilla_de" class="form-select" aria-label="Default select example">
@@ -71,6 +72,7 @@
                 <option value="Journey de seguimiento a oportunidades en proceso Whatsapp - 2023-12-04T171510349">DATOS_PARA_VENTAS</option>
                 <option value="LEADS XPENG 2024 _ XPENG Costa Rica 274053937">LEADS _XPENG_2024</option>
                 <option value="GP_Oportunidades_2024">Jorney_2025</option>
+                <option value="TEST_FREEWAY_oportunidades_en_proceso_Whatsapp">TEST_FREEWAY_oportunidades_en_proceso_Whatsapp</option> <!--Cambios MUR-->
               </select>
             
 
