cambiar parametro agregar data prueba2

--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,8 @@
                 <option value="pwmJduHMV2duUL4ZUc8x">Purdy Centers Ford</option>
                 <option value="CQWsS9Lz7cfimi5emFF9">Purdy en linea Ford</option>
                 <option value="SJ6B7P6ziWKBbwYoQuYf">TEST_FREEWAY_oportunidades_en_proceso_Whatsapp</option> <!--Cambios MUR-->
+                <option value="QRYT10uzVHcPkFbHYl9g">DATA_PRUEBA_NUEVOS_USER</option> 
+
               </select>
               <label for="selectplant">Selecciona la extensión de datos envio</label>
             <select id="plantilla_de" class="form-select" aria-label="Default select example">
@@ -73,6 +75,8 @@
                 <option value="LEADS XPENG 2024 _ XPENG Costa Rica 274053937">LEADS _XPENG_2024</option>
                 <option value="GP_Oportunidades_2024">Jorney_2025</option>
                 <option value="TEST_FREEWAY_oportunidades_en_proceso_Whatsapp">TEST_FREEWAY_oportunidades_en_proceso_Whatsapp</option> <!--Cambios MUR-->
+                <option value="DATA_PRUEBA_NUEVOS_USER">LEADS DATA_PRUEBA_NUEVOS_USER</option>
+
               </select>
             
 
